# YummyVerse-AudioLDM

./: .envrc  .gitignore  DOCS.md  Dockerfile  README.md  compose.yml  dummy  flake.nix  pyproject.toml  setting.json  test.py
audioldm_train/: infer.py
audioldm_train/config/: kaggle_custom.yaml
audioldm_train/train/: latent_diffusion.py
audioldm_train/utilities/: tools.py
audioldm_train/utilities/audio/: stft.py
preprocessor/: execute.py
settings/: config.json  meta.json
src/: app.py  controller.py  entry.py
src/api/: api.py  app.py  controller.py  infer.py
src/audioldm_train/config/: kaggle_custom.yaml
src/audioldm_train/modules/latent_diffusion/: ddpm.py
src/audioldm_train/train/: latent_diffusion.py
src/preprocessor/: execute.py
tests/captionlist/: kaggle.lst
