[project]
name = "audioldm-training-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "audioldm-eval",
    "braceexpand==0.1.7",
    "einops==0.7.0",
    "ftfy==6.1.1",
    "h5py==3.10.0",
    "hear21passt",
    "ipdb==0.13.13",
    "kornia==0.7.0",
    "matplotlib==3.8.1",
    "numpy==1.26.4",
    "pandas==2.1.3",
    "pytorch-lightning==2.1.1",
    "ruamel-yaml==0.18.5",
    "taming-transformers-rom1504==0.0.6",
    "transformers==4.30.2",
    "wandb==0.16.0",
    "webdataset==0.2.75",
    "wget==3.2",
]

[tool.uv.sources]
hear21passt = { git = "https://github.com/haoheliu/passt_hear21.git" }
audioldm-eval = { git = "https://github.com/YummyVerseVR/audioldm_eval.git" }
